--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -121,14 +121,15 @@ input[type=submit]:focus {
   display: flex;
   position: fixed;
   width: 300px;
+  padding-bottom: 20px;
 }
 
 .errors{
   color: rgb(229,9,20);
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 17px;
   font-weight: 300;
-  height: -70px;
+  
 }
 
 .session_submit{
