--- a/app/assets/stylesheets/components/_splash.scss
+++ b/app/assets/stylesheets/components/_splash.scss
@@ -83,6 +83,7 @@
   flex-direction: column;
   align-items: center;
   color: white;
+  padding-bottom: 55px;
 }
 
 .main_text{
@@ -92,14 +93,14 @@
 
 .main_splash_text{
   font-family: sans-serif;
-  font-size: 85px;
-  font-weight: 880;
+  font-size: 80px;
+  font-weight: 800;
   padding: 15px;
 }
 
 .sub_splash_text{
   font-family: sans-serif;
-  font-size: 30px;
+  font-size: 29px;
   font-weight: lighter;
 }
 
